# lgames

2.6.5/po/: tr.po
barrage/: BUGS  ChangeLog  barrage.spec  config.h.in  configure.ac
barrage/src/: main.c
lbreakouthd/: Changelog  Makefile.am  TODO  configure.ac
lbreakouthd/libgame/: balls.c  bricks.c  game.c  gamedefs.h  levels.c
lbreakouthd/po/: LINGUAS  de.gmo  de.po  es.po  fr.po  lbreakouthd.pot  ru.po  sv.po
lbreakouthd/src/: clientgame.cpp  clientgame.h  config.cpp  config.h  editor.cpp  editor.h  hiscores.cpp  main.cpp  menu.cpp  menu.h  sdl.cpp  sdl.h  selectdlg.cpp  selectdlg.h  tools.cpp  tools.h  view.cpp  view.h
lbreakouthd/src/levels/: JustGoForIt
lpairs2/: ChangeLog  README  configure.ac
lpairs2/po/: lpairs2.pot
lpairs2/src/: game.cpp  game.h  sdl.cpp  sdl.h  theme.cpp  theme.h  view.cpp  view.h
ltris/: CROSSCOMPILE  ChangeLog  Makefile.am  aclocal.m4  config.h.in  configure.ac  ltris.appdata.xml  ltris.desktop
ltris/m4/: Makefile.am
ltris/po/: de.po  fr.po  it.po  ltris.pot  pt.po  sv.po  tr.po
ltris/src/: bowl.c  bowl.h  config.c  config.h  cpu.c  cpu.h  main.c  manager.c  manager.h  tetris.c  tetris.h
